force-app/main/default/objects/Program_Course__c/Program_Course__c.object-meta.xml
<CustomObject>
    <label>Program Course</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>