force-app/main/default/objects/Program_Course__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Course__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Course</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Program Courses</relationshipLabel>
    <relationshipName>Program_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>