force-app/main/default/objects/Program_Course__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Course__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Program Courses (Program)</relationshipLabel>
    <relationshipName>Program_Courses1</relationshipName>
    <type>Lookup</type>
</CustomField>